--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0;
+    padding: 0 10px;
     pointer-events: none;
     z-index: 999;
     display: flex;
@@ -120,6 +121,7 @@ body {
     background: #f5e4e8;
     max-width: 420px;
     width: 100%;
+    height: 100%;
     text-align: center;
     border-radius: 10px;
     padding: 30px;
